# test-pinocchio-workflows2

.github/workflows/: main.yml  pinocchio.yml
test_pinocchio/: CMakeLists.txt
test_pinocchio/src/: check_pinocchio_version.cpp
